Correcting a break in figcaption marginalia

--- a/assets/css/marginalia.scss
+++ b/assets/css/marginalia.scss
@@ -34,7 +34,9 @@ figure[role="note"] {
     margin-right: 0;
     float: none;
     clear: both;
-    max-width: 100%; }
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 
